# devpulse-client

./: .gitignore  README.md  pyproject.toml  run_devpulse.sh
src/devpulse_client/: __init__.py
src/devpulse_client/batcher/: __init__.py  event_batcher.py
src/devpulse_client/cli/: commands.py
src/devpulse_client/config/: __init__.py  logger_config.py  settings.py  tracker_settings.py
src/devpulse_client/core/: __init__.py  app.py  clean_app.py  event_normalizer.py  events.py  new_app.py
src/devpulse_client/core/activity_state_tracker/: activity_state_task.py
src/devpulse_client/core/heartbeat/: heartbeat_task.py
src/devpulse_client/core/screenshot_tracker/: screenshot_capturer.py  screenshot_task.py
src/devpulse_client/core/signal_handler/: __init__.py  signal_handler.py
src/devpulse_client/core/trackers/: __init__.py  activity_tracker.py  base.py  heartbeat_tracker.py  screenshot_tracker.py  window_tracker.py
src/devpulse_client/core/window_tracker/: window_task.py
src/devpulse_client/credential/: __init__.py  manager.py  store.py  validation.py
src/devpulse_client/enroll/: __init__.py  credential_store.py  design.txt  enrollment_client.py
src/devpulse_client/orchestrator/: __init__.py  pipeline_orchestrator.py
src/devpulse_client/queuer/: __init__.py  event_queue.py
src/devpulse_client/sender/: __init__.py  http_sender.py
src/devpulse_client/wal/: __init__.py  event_wal.py
tests/: check_fingerprint.py  test_clean_architecture.py  test_enhanced_wal.py  test_pipeline.py  test_wal_rotation.py
(+5 files in other folders)
